--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AndroidLabs</string>
     <string name="hello_message">Hello World!</string>
     <string name="ButtonText">I\' am a button</string>
-    </resources>
+    <string name="TextButton">Button</string>
+    <string name="TextWidget">Here are my widgets</string>
+    <string name="TextCheck">Check this out</string>
+    <string name="TextSwitch">Switch on/off</string>
+    <string name="TextAnswer">Type your answer here</string>
+</resources>
