--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="Choice1">Choice1</string>
     <string name="Choice2">Choice2</string>
     <string name="Choice3">Choice3</string>
+    <string name="Message">Message here</string>
+    <string name="ID">ID = </string>
 
 </resources>
